# flic-a-disc

./: .gitignore  README.md  data-annotate.txt  data-annotate2.txt  deploy.sh  junk.html  junk.json  map.txt  notebook.ipynb  similarity_scores.csv  todo.txt  todo2.txt
python_services/: .gitignore  conftest.py  discogs_token.json  knapsack_results.json  pyproject.toml  requirements.lock.txt  requirements.txt  sellers.json  similarity_scores.json
python_services/bandit/: apps.py  bandit_selection.py  contrastive_encoder.py  discogs_client.py  ebay_client.py  ebay_tfidf.py  enhance_listings.py  features.py  knapsack.py  models.py  neural_bandit.py  test.py  text_utils.py  title_vectorizer.py  training.py  triplet_generation.py  urls.py  views.py
python_services/bandit/experiments/: test-inv.csv  test_knapsack.py
python_services/bandit/migrations/: 0001_initial.py  0002_discogslisting.py  0003_thresholdconfig.py  0004_auto_20251008_0314.py  0005_alter_banditmodel_options.py  0006_add_batch_count.py  0007_batchperformance.py  0008_alter_bandittraininginstance_options.py  0009_add_predicted_prob.py  0010_bandittraininginstance_predicted_uncertainty_and_more.py  0011_ebaylisting.py  0012_alter_ebaylisting_options.py  0013_tfidfdb.py  0014_rename_metadata_fetched_ebaylisting_enriched.py  0015_alter_record_options.py  0016_record_record_image.py  0017_record_description.py  0018_todo.py  0019_ebaybatchperformance.py  0020_bandittraininginstance_record.py  0021_record_saved.py  (+19 more)
python_services/config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
(+84 files in other folders)
